# easy_aruco

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: ArucoMarkerDetector.h  CharucoBoardDetector.h  Detector.h  Utils.h
launch/: track_aruco_marker.launch  track_charuco_board.launch
scripts/: create_aruco_marker.py  create_charuco_board.py
src/: ArucoMarkerDetector.cpp  CharucoBoardDetector.cpp  Detector.cpp  Utils.cpp  easy_aruco_node.cpp
